create style file

--- a/index.html
+++ b/index.html
@@ -21,19 +21,15 @@
   </head>
   <body>
     <!-- logo -->
-     <div class="container">
-        <a class="navbar-brand" href="#">
-          <img
-            src="/docs/5.3/assets/brand/bootstrap-logo.svg"
-            alt="Bootstrap"
-            width="30"
-            height="24"
-          />
-        </a>
-      </div>
+    
     <!-- navbar -->
     <nav>
       <ul class="nav justify-content-end">
+         <div class="container logo">
+        <a class="navbar-brand" href="#">
+          <img  src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Bootstrap" width="30"  height="24" />
+        </a>
+      </div>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
@@ -48,5 +44,28 @@
         </li>
       </ul>
     </nav>
+    <!-- body -->
+     <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                 <h1 class="title">I'm <br> Somaya Ataie</h1>
+                 <div class="line"></div>
+                 <p>A freelancer who provide services for digital programming
+                 and Design content  needs,for all businesses ehit more than 1 years of experiance </p>
+            </div>
+            <div class="col-md-4">
+                <img src="./images/ChatGPT Image Jan 10, 2026, 06_20_47 PM.png" alt="header-img" class="header-img">
+            </div>
+            <div class="col-md-4">
+                <h5 class="content-header">
+                    <p>Let's build quality products in  programmind and design with my services</p>
+                </h5>
+                <br><br>
+                <div class="social-media">
+                        <a href=""></a><a href=""></a><a href=""></a>
+                </div>
+            </div>
+        </div>
+     </div>
   </body>
 </html>
