complete header section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                  <div class="line"></div><br>
                  <p>A freelancer who provide services for digital programming
                  and Design content  needs,for all businesses ehit more than 1 years of experiance </p>
+
+                 <buttton class="btn" >Download</buttton>
+                 <buttton class="btn btn0">Let's Talk</buttton>
             </div>
             <div class="col-md-4">
                 <img class="header-img" src="./images/ChatGPT_Image_Jan_10__2026__06_20_47_PM-removebg-preview.png" alt="header-img" >
