--- a/index.html
+++ b/index.html
@@ -55,28 +55,25 @@
     <!-- body -->
      <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
                  <h1 class="title">I'm <br> Somaya Ataie</h1><br>
                  <div class="line"></div><br>
                  <p>A freelancer who provide services for digital programming
                  and Design content  needs,for all businesses ehit more than 1 years of experiance </p>
 
-                 <buttton class="btn" >Download</buttton>
+                 <buttton class="btn" >Download CV</buttton>
                  <buttton class="btn btn0">Let's Talk</buttton>
             </div>
-            <div class="col-md-4">
-                <img class="header-img" src="./images/ChatGPT_Image_Jan_10__2026__06_20_47_PM-removebg-preview.png" alt="header-img" >
-            </div>
-            <div class="col-md-4">
-                <h5 class="content-header">
-                    <p>Let's build quality products in  programmind and design with my services</p>
-                </h5>
-                <div class="social-media">
+            <div class="col-md-6">
+               <img class="header-img" src="./images/2.png" alt="header-img" ><br><br>
+
+                  <div class="social-media">
                   <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                   <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
                   <a href=""><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
+
         </div>
      </div>
   </body>
