--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </a>
       </div>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="#home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About me</a>
@@ -53,6 +53,8 @@
       </ul>
     </nav>
     <!-- body -->
+     <!----------------------- home section-------------------- -->
+     <section class="home" id="home">
      <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -76,5 +78,6 @@
 
         </div>
      </div>
+     </section>
   </body>
 </html>
