--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- font awsome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- bootstrap link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -23,21 +28,20 @@
   </head>
   <body>
     <!-- logo -->
-     
+
     <!-- navbar -->
     <nav>
-       
       <ul class="nav justify-content-end">
-         <div class=" logo justify-content-start">
-        <a class="navbar-brand" href="#">
-          <img
-            src="/docs/5.3/assets/brand/bootstrap-logo.svg"
-            alt="Bootstrap"
-            width="30"
-            height="24"
-          />
-        </a>
-      </div>
+        <div class="logo justify-content-start">
+          <a class="navbar-brand" href="#">
+            <img
+              src="/docs/5.3/assets/brand/bootstrap-logo.svg"
+              alt="Bootstrap"
+              width="30"
+              height="24"
+            />
+          </a>
+        </div>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#home">Home</a>
         </li>
@@ -53,31 +57,102 @@
       </ul>
     </nav>
     <!-- body -->
-     <!----------------------- home section-------------------- -->
-     <section class="home" id="home">
-     <div class="container">
+    <!----------------------- home section-------------------- -->
+    <section class="home" id="home">
+      <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                 <h1 class="title">I'm <br> Somaya Ataie</h1><br>
-                 <div class="line"></div><br>
-                 <p>A freelancer who provide services for digital programming
-                 and Design content  needs,for all businesses ehit more than 1 years of experiance </p>
+          <div class="col-md-6">
+            <h1 class="title">
+              I'm <br />
+              Somaya Ataie
+            </h1>
+            <br />
+            <div class="line"></div>
+            <br />
+            <p>
+              A freelancer who provide services for digital programming and
+              Design content needs,for all businesses ehit more than 1 years of
+              experiance
+            </p>
 
-                 <buttton class="btn" >Download CV</buttton>
-                 <buttton class="btn btn0">Let's Talk</buttton>
+            <buttton class="btn">Download CV</buttton>
+            <buttton class="btn btn0">Let's Talk</buttton>
+          </div>
+          <div class="col-md-6">
+            <img
+              class="header-img"
+              src="./images/2.png"
+              alt="header-img"
+            /><br /><br />
+
+            <div class="social-media">
+              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
             </div>
-            <div class="col-md-6">
-               <img class="header-img" src="./images/2.png" alt="header-img" ><br><br>
-
-                  <div class="social-media">
-                  <a href=""><i class="fa-brands fa-facebook-f"></i></a>
-                  <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                  <a href=""><i class="fa-brands fa-twitter"></i></a>
-                </div>
-            </div>
-
+          </div>
         </div>
-     </div>
-     </section>
+      </div>
+    </section>
+    <!-- ---------------------about section-------------- -->
+    <section class="sec-about" id="about">
+      <h1 class="abot-title">About <span>Me</span></h1>
+      <br /><br />
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <p class="about-para">
+              I am passionate about Front-End Web Development and confident in
+              my ability to contribute effectively to a development team. With a
+              strong foundation in web development and hands-on experience
+              through personal projects and training, I am eager to apply my
+              skills in a professional setting. I have also completed a
+              Front-End Web Development course at CTI(Code To Inspire), gaining
+              solid skills in HTML, CSS, JavaScript and Bootstrap .I have
+              completed a Backend Web Development course at CTI(Code To
+              Inspire), gaining solid skills inNode.js,Express.js and
+              PostgreSQL. but I have strong knowleage in Front-end web
+              development. Additionally, I learn some skills from Graphic Design
+              like Photoshop and Figma. My personal projects, available on
+              GitHub, demonstrate practical experience in buildingweb
+              applications and user interfaces. I am enthusiastic about
+              contributing my creativity and technical skills to a professional
+              team while continuing to develop my abilities. Thank you for
+              considering my application, and I would welcome the opportunity to
+              discuss how I can be an asset to your team.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <table class="table-info">
+              <tr>
+                <th>FullName</th>
+                <th>phone</th>
+              </tr>
+              <tr>
+                <td>Somaya Ataie</td>
+                <td>07888888888</td>
+              </tr>
+              <tr>
+                <th>Email</th>
+              </tr>
+              <tr>
+                <td>somyaataie2024@gmail.com</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+      <div class="card" style="width: 18rem">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card’s content.
+          </p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
