complete about section

--- a/index.html
+++ b/index.html
@@ -125,15 +125,15 @@
           <div class="col-md-4">
             <table class="table-info">
               <tr>
-                <th>FullName</th>
-                <th>phone</th>
+                <th> ✨ FullName</th>
+                <th>📞 phone</th>
               </tr>
               <tr>
                 <td>Somaya Ataie</td>
                 <td>07888888888</td>
               </tr>
               <tr>
-                <th>Email</th>
+                <th>📧 Email</th>
               </tr>
               <tr>
                 <td>somyaataie2024@gmail.com</td>
@@ -141,16 +141,85 @@
             </table>
           </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card’s content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div><br><br>
+      <h1 style="text-align: center;color:cadetblue;" >🤹‍♂️Skills</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card" >
+              <img src="./images/Html.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">HTML</h5>
+                <a href="#" class="btn1">99%</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-3">
+            <div class="card">
+              <img src="./images/css.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">CSS</h5>
+                <a href="#" class="btn1">99%</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-3">
+            <div class="card">
+              <img src="./images/JavaScript .jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">JS</h5>
+                <a href="#" class="btn1">65%</a>
+              </div>
+            </div>
+          </div>
+             <div class="col-md-3">
+            <div class="card">
+              <img src="./images/NEUTRON.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">React</h5>
+                <a href="#" class="btn1">40%</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <div class="row">
+          <div class="col-md-3">
+            <div class="card" >
+              <img src="./images/Photoshop.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Photoshop</h5>
+                <a href="#" class="btn1">80%</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-3">
+            <div class="card">
+              <img src="./images/NodeJS.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">NodeJS</h5>
+                <a href="#" class="btn1">50%</a>
+              </div>
+            </div>
+          </div>
+           <div class="col-md-3">
+            <div class="card">
+              <img src="./images/Bootstrap.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Bootstrap</h5>
+                <a href="#" class="btn1">85%</a>
+              </div>
+            </div>
+          </div>
+             <div class="col-md-3">
+            <div class="card">
+              <img src="./images/TOP_30_des_plugins_SEO_WordPress-removebg-preview.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Wordpress</h5>
+                <a href="#" class="btn1">0%</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
