complete projects section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div class="col-md-4">
             <table class="table-info">
               <tr>
-                <th> ✨ FullName</th>
+                <th>✨ FullName</th>
                 <th>📞 phone</th>
               </tr>
               <tr>
@@ -141,12 +141,13 @@
             </table>
           </div>
         </div>
-      </div><br><br>
-      <h1 style="text-align: center;color:cadetblue;" >🤹‍♂️Skills</h1>
+      </div>
+      <br /><br />
+      <h1 style="text-align: center; color: cadetblue">🤹‍♂️Skills</h1>
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <div class="card" >
+            <div class="card">
               <img src="./images/Html.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">HTML</h5>
@@ -154,7 +155,7 @@
               </div>
             </div>
           </div>
-           <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card">
               <img src="./images/css.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -163,16 +164,20 @@
               </div>
             </div>
           </div>
-           <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card">
-              <img src="./images/JavaScript .jpeg" class="card-img-top" alt="..." />
+              <img
+                src="./images/JavaScript .jpeg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">JS</h5>
                 <a href="#" class="btn1">65%</a>
               </div>
             </div>
           </div>
-             <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card">
               <img src="./images/NEUTRON.jpeg" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -183,17 +188,21 @@
           </div>
         </div>
 
-         <div class="row">
+        <div class="row">
           <div class="col-md-3">
-            <div class="card" >
-              <img src="./images/Photoshop.png" class="card-img-top" alt="..." />
+            <div class="card">
+              <img
+                src="./images/Photoshop.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Photoshop</h5>
                 <a href="#" class="btn1">80%</a>
               </div>
             </div>
           </div>
-           <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card">
               <img src="./images/NodeJS.png" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -202,22 +211,70 @@
               </div>
             </div>
           </div>
-           <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card">
-              <img src="./images/Bootstrap.png" class="card-img-top" alt="..." />
+              <img
+                src="./images/Bootstrap.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Bootstrap</h5>
                 <a href="#" class="btn1">85%</a>
               </div>
             </div>
           </div>
-             <div class="col-md-3">
+          <div class="col-md-3">
             <div class="card">
-              <img src="./images/TOP_30_des_plugins_SEO_WordPress-removebg-preview.png" class="card-img-top" alt="..." />
+              <img
+                src="./images/TOP_30_des_plugins_SEO_WordPress-removebg-preview.png"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
                 <h5 class="card-title">Wordpress</h5>
                 <a href="#" class="btn1">0%</a>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- --------------------------------section Galarry------------------- -->
+    <section class="sec-gallery">
+      <h1>Projects</h1>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card">
+              <img src="./images/beautyscreenshot.jpg" class="card-img" alt="..." />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="./images/screenshot.png" class="card-img" alt="..." />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="./images/screen.jpeg" class="card-img" alt="..." />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card" >
+              <img src="./images/screen (1).jpeg" class="card-img" alt="..." />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" >
+              <img src="./images/new.png" class="card-img" alt="..." />
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <img src="./images/screenshot.jpg" class="card-img" alt="..." />
             </div>
           </div>
         </div>
