--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
           <a class="nav-link" href="#">About me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
+          <a class="nav-link" href="#gallary">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Me</a>
+          <a class="nav-link" href="#contact">Contact Me</a>
         </li>
       </ul>
     </nav>
@@ -241,7 +241,7 @@
       </div>
     </section>
     <!-- --------------------------------section Galarry------------------- -->
-    <section class="sec-gallery">
+    <section id="gallary" class="sec-gallery">
       <h1>Projects</h1>
       <div class="container">
         <div class="row">
@@ -280,5 +280,41 @@
         </div>
       </div>
     </section>
+    <!-- -------------------------contact page---------------- -->
+     <section id="contact" class="sec-contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <h1>Get in touch</h1>
+            <h5>Email:</h5>
+            <p> somayaataie2024@gmail.com</p>
+            <h5>Phone:</h5>
+            <p>0788888888</p>
+
+            <h5>Address:</h5>
+            <p>Herat-Afghanistan</p>
+
+            <h5>Follow Me:</h5>
+              <div class="social-media">
+              <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+              <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href=""><i class="fa-brands fa-twitter"></i></a>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <form action="">
+              <label for="">Your Name</label>
+              <input type="text" placeholder="Enter your name..">
+              <br><br>
+              <label for="">Your Email</label>
+              <input type="email" placeholder="Enter your email.."><br><br>
+              <label for="">Massage</label><br>
+              <textarea name="" id="" cols="35" rows="5"></textarea>
+            </form><br>
+           <a href=""><button class="btn4">Back top</button></a>
+          </div>
+        </div>
+      </div>
+     </section>
   </body>
 </html>
