--- a/index.html
+++ b/index.html
@@ -33,14 +33,7 @@
     <nav>
       <ul class="nav justify-content-end">
         <div class="logo justify-content-start">
-          <a class="navbar-brand" href="#">
-            <img
-              src="/docs/5.3/assets/brand/bootstrap-logo.svg"
-              alt="Bootstrap"
-              width="30"
-              height="24"
-            />
-          </a>
+          <a class="navbar-brand" href="#"><h5>Somaya Ataie</h5> </a>
         </div>
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#home">Home</a>
